--- a/css/style.css
+++ b/css/style.css
@@ -18,101 +18,145 @@ h1, h2, h3, h4, h5 {
 /* Первый экран*/
 
 .header {
-padding-bottom: 40px;
-padding-top: 45px;
-background: #373c3f;
+	padding-bottom: 40px;
+	padding-top: 45px;
+	background: #373c3f;
 }
 
 .menu__item a {
- color: #ebebeb;
- font-size: 15px;
+	color: #ebebeb;
+	font-size: 15px;
+}
+
+.menu__item a:hover {
+	text-decoration: none;
+	opacity: 1;
+	text-shadow: 0 0 10px #fff;
 }
 
 .menu__item {
- margin: 0 30px;
- white-space: nowrap;
+	margin: 0 30px;
+	white-space: nowrap;
 }
+
+/* Второй экран*/
 
 .introduction {
 	background: #19b4c6;
-background: -moz-linear-gradient(-45deg, #19b4c6 0%, #0ca3b9 49%, #0992aa 75%, #078aa4 100%);
-background: -webkit-linear-gradient(-45deg, #19b4c6 0%,#0ca3b9 49%,#0992aa 75%,#078aa4 100%);
-background: linear-gradient(135deg, #19b4c6 0%,#0ca3b9 49%,#0992aa 75%,#078aa4 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#19b4c6', endColorstr='#078aa4',GradientType=1 );
+	background: -moz-linear-gradient(-45deg, #19b4c6 0%, #0ca3b9 49%, #0992aa 75%, #078aa4 100%);
+	background: -webkit-linear-gradient(-45deg, #19b4c6 0%,#0ca3b9 49%,#0992aa 75%,#078aa4 100%);
+	background: linear-gradient(135deg, #19b4c6 0%,#0ca3b9 49%,#0992aa 75%,#078aa4 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#19b4c6', endColorstr='#078aa4',GradientType=1 );
 }
 
 .introduction__title {
- color: #ecf7f9;
- font-size: 52px;
- padding-top: 115px;
+	color: #ecf7f9;
+	font-size: 52px;
+	padding-top: 115px;
 }
 
 .introduction__block {
- 	padding-bottom: 90px;
+	padding-bottom: 90px;
 }
 
 .introduction__href {
- color: #abd4de;
- font-size: 26px;
- transition: 1s ease-out;
+	color: #abd4de;
+	font-size: 26px;
+	transition: 1s ease-out;
 
 }
 
 .introduction__href:hover {
 	text-decoration: none;
 	color: #ffffff;
+	opacity: 1;
+	font-size: 26px;
+	text-shadow: 0 0 10px #fff;
 }
 
 .introduction__icon {
-  padding-left: 300px;
-  font-size: 36px;
-  color: #ffffff;
+	padding-left: 300px;
+	font-size: 36px;
+	color: #ffffff;
 }
-/* Второй экран*/
 
-.text-box {
-background: #27212c;
-background: -moz-linear-gradient(left, #27212c 0%, #27212c 48%, #bc3183 50%, #bc3183 100%);
-background: -webkit-linear-gradient(left, #27212c 0%,#27212c 48%,#bc3183 50%,#bc3183 100%);
-background: linear-gradient(to right, #27212c 0%,#27212c 48%,#bc3183 50%,#bc3183 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#27212c', endColorstr='#bc3183',GradientType=1 );
-}
+/* Третий экран*/
+
 .title-box {
-background: #27212c;
+	background: #27212c;
 }
 .text-box__title {
-color: #9887a6;
- font-size: 26px;
- padding: 55px 0;
- background: #27212c;
+
+	color: #9887a6;
+	font-size: 26px;
+	padding: 55px 0;
+	background: #27212c;
+	padding-left: 115px;
 }
 
 .text-box__angel {
-background: #bc3183;
-text-align: right;
+	background: #bc3183;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .text-box__icon {
- color: #ffffff;
-  font-size: 36px;
+	color: #ffffff;
+	font-size: 36px;
+}
+.text-box__href {
+	transition: 1s ease-out;
+
+}
+.text-box__href:hover {
+	text-shadow: 0 0 10px #fff;
+	opacity: 1;
 }
 
+/* Четвёртый экран*/
+
+.foto-box__img {
+	width: 100%;
+}
+
+.no-padding {
+	padding: 0 !important;
+}
+
+
+/* Пятый экран*/
 
 .title {
 	text-align: center;
 	padding-bottom: 70px;
 }
 
-.title_main {
+.title__main {
 	font-size: 30px;
-		text-transform: uppercase;
-		color: #088ca5;
+	color: #108ba5;
+	padding-top: 55px;
+	padding-bottom: 35px;
+}
+
+.title-main__href {
+	transition: 1s ease-out;
+
+}
+
+.title-main__href:hover {
+	text-decoration: none;
+	text-shadow: 0 0 10px #BECEE2;
+	opacity: 1;
 }
 
 .title__text {
 	font-size: 14px;
-	margin: 0 auto;
 	color: #515151;
+	text-align: left;
 }
 
-/* Третий экран*/
+.m-bottom {
+	margin-bottom: 1.5em;
+}
+
